# nix-templates

./: .editorconfig  AGENTS.md  README.md  Taskfile.yml  flake.nix  init.sh
bash/: Taskfile.yml  example.sh  flake.nix
default/: .editorconfig  Taskfile.yml  flake.nix
flake-modules/: common.nix
go/: .editorconfig  .gitignore  Taskfile.yml  flake.nix  go.mod  main.go
html/: .gitignore  Taskfile.yml  biome.json  flake.nix  package.json
html/src/: app.js  index.html  main.css  main.js
python/: .editorconfig  .gitignore  Taskfile.yml  flake.nix  pyproject.toml
python/src/example/: __init__.py  test_example.py
